--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -1,7 +1,7 @@
 .jumbotron {
     margin-bottom: 0px;
-    background-image: url("https://images.search.yahoo.com/yhs/search;_ylt=A0geK92qIl5bE1oAxfUPxQt.;_ylu=X3oDMTByMjB0aG5zBGNvbG8DYmYxBHBvcwMxBHZ0aWQDBHNlYwNzYw--?p=movie+background&fr=yhs-iba-1&hspart=iba&hsimp=yhs-1#id=21&iurl=https%3A%2F%2Fwww.intrawallpaper.com%2Fstatic%2Fimages%2Fmaxresdefault_jKFJl8g.jpg&action=click");
-    background-position: 0% 25%;
+    background-image: url("img/avengers.jpg");
+    background-position: 0% 55%;
     background-size: cover;
     background-color:white;
     background-repeat: no-repeat;
