--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
     margin: 20px;
   }
   
@@ -7,5 +7,5 @@
     margin-top: 5px;
     margin-bottom: 5px;
     width: 100%;
-  }
+  } */
   
